--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -56,7 +56,7 @@
 }
 
 .alertEnable {
-    position: fixed;
+    position: absolute;
     top: 25%;
     left: 50%;
     width: 95%;
@@ -69,7 +69,6 @@
     padding: 1rem;
     margin: 1rem auto ;
     text-align: center;
-    
 }
 
 .alertCorrect {
